[COMMIT] The proj files have been updated to enable SourceLink [RT.Comb.csproj]

--- a/src/RT.Comb/RT.Comb.csproj
+++ b/src/RT.Comb/RT.Comb.csproj
@@ -14,5 +14,14 @@
 		<PackageProjectUrl>https://github.com/richardtallent/RT.Comb</PackageProjectUrl>
 		<PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
 		<RepositoryUrl>https://github.com/richardtallent/RT.Comb</RepositoryUrl>
-	</PropertyGroup>
+	
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 </Project>
